unpackaged/main/default/objects/Opportunity/fields/Owner_Commit__c.field-meta.xml
<CustomField>
    <fullName>Owner_Commit__c</fullName>
    <description>Roll back to Include in forecast</description>
    <label>z_Upside</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>