unpackaged/main/default/objects/Opportunity/fields/Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account__c</fullName>
    <formula>Account.Parent.Name</formula>
    <label>Parent Account</label>
    <type>Text</type>
</CustomField>