unpackaged/main/default/objects/Opportunity/fields/PC_Laptop_Required__c.field-meta.xml
<CustomField>
    <fullName>PC_Laptop_Required__c</fullName>
    <label>PC/Laptop Required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>