unpackaged/main/default/objects/Opportunity/fields/PMO_Accepted_Date__c.field-meta.xml
<CustomField>
    <fullName>PMO_Accepted_Date__c</fullName>
    <label>Consulting Accepted Date</label>
    <type>Date</type>
</CustomField>