unpackaged/main/default/objects/Opportunity/fields/PMO_Completed_By__c.field-meta.xml
<CustomField>
    <fullName>PMO_Completed_By__c</fullName>
    <label>Consulting Accepted on behalf of</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>