unpackaged/main/default/objects/Opportunity/fields/Pricebook_Overridden__c.field-meta.xml
<CustomField>
    <fullName>Pricebook_Overridden__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pricebook Overridden</label>
    <type>Checkbox</type>
</CustomField>