unpackaged/main/default/objects/Opportunity/fields/Primary_Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Campaign_Name__c</fullName>
    <formula>Campaign.Name</formula>
    <label>Primary Campaign Name</label>
    <type>Text</type>
</CustomField>