unpackaged/main/default/objects/Opportunity/fields/Product_BDM_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Product_BDM_Forecast__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product BDM Forecast</label>
    <type>Checkbox</type>
</CustomField>