unpackaged/main/default/objects/Opportunity/fields/Product_Count_BD_Selected__c.field-meta.xml
<CustomField>
    <fullName>Product_Count_BD_Selected__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Twin field</description>
    <label>Product Count BD Selected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>