unpackaged/main/default/objects/Opportunity/fields/Product_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Product_Modified_Date__c</fullName>
    <description>Last modified date from opportunityline item to trigger item split</description>
    <label>Product Modified Date</label>
    <summarizedField>OpportunityLineItem.LastModifiedDate</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>