unpackaged/main/default/objects/Opportunity/fields/Program_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Program_End_Date__c</fullName>
    <label>AMS End Date</label>
    <type>Date</type>
</CustomField>