unpackaged/main/default/objects/Opportunity/fields/Program_Length_months__c.field-meta.xml
<CustomField>
    <fullName>Program_Length_months__c</fullName>
    <defaultValue>12</defaultValue>
    <label>Program Length (months)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>