unpackaged/main/default/objects/Opportunity/fields/Program_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Program_Start_Date__c</fullName>
    <label>AMS Start Date</label>
    <type>Date</type>
</CustomField>