unpackaged/main/default/objects/Opportunity/fields/Project_Code__c.field-meta.xml
<CustomField>
    <fullName>Project_Code__c</fullName>
    <description>Project Code</description>
    <label>Project Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>