unpackaged/main/default/objects/Opportunity/fields/Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Manager</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select a TechnologyOne Contact Name</errorMessage>
        <filterItems>
            <field>Contact.Account_Name_Hidden__c</field>
            <operation>contains</operation>
            <value>TechnologyOne</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Project Manager)</relationshipLabel>
    <relationshipName>Opportunities_PM</relationshipName>
    <type>Lookup</type>
</CustomField>