unpackaged/main/default/objects/Opportunity/fields/Project_Stage_Completed__c.field-meta.xml
<CustomField>
    <fullName>Project_Stage_Completed__c</fullName>
    <description>Identifies the last completed Stage of the Project</description>
    <inlineHelpText>Identifies the last completed Stage of the Project</inlineHelpText>
    <label>Project Stage Completed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strategy</fullName>
            </value>
            <value>
                <fullName>Configuration</fullName>
            </value>
            <value>
                <fullName>Handover and Closure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>