unpackaged/main/default/objects/Opportunity/fields/Project_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Project_Start_Date__c</fullName>
    <inlineHelpText>The Project start date should be 8 weeks after the opportunity close date if consulting services is required.</inlineHelpText>
    <label>Project Start Date</label>
    <type>Date</type>
</CustomField>