unpackaged/main/default/objects/Opportunity/fields/Projector_Required__c.field-meta.xml
<CustomField>
    <fullName>Projector_Required__c</fullName>
    <label>Projector Required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>