unpackaged/main/default/objects/Opportunity/fields/Proposal_Quote_Provided__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Quote_Provided__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Proposal/Quote Provided</label>
    <type>Checkbox</type>
</CustomField>