unpackaged/main/default/objects/Opportunity/fields/Quoted_Solution__c.field-meta.xml
<CustomField>
    <fullName>Quoted_Solution__c</fullName>
    <description>From SRS Pricebook.</description>
    <label>Quoted Solution Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>