unpackaged/main/default/objects/Opportunity/fields/QuoteId__c.field-meta.xml
<CustomField>
    <fullName>QuoteId__c</fullName>
    <inlineHelpText>Updated from SRS Price Book</inlineHelpText>
    <label>QuoteId</label>
    <length>10</length>
    <type>Text</type>
</CustomField>