unpackaged/main/default/objects/Opportunity/fields/Reference_Visits_Completed__c.field-meta.xml
<CustomField>
    <fullName>Reference_Visits_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reference Visits Completed</label>
    <type>Checkbox</type>
</CustomField>