unpackaged/main/default/objects/Opportunity/fields/Renewal_Pricing_Method__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Pricing_Method__c</fullName>
    <defaultValue>&quot;Uplift&quot;</defaultValue>
    <description>This value will come in from the Service Contract and is made read only for anyone but system admin, default set to list.</description>
    <label>Renewal Pricing Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Renewal_Pricing_Method</valueSetName>
    </valueSet>
</CustomField>