unpackaged/main/default/objects/Opportunity/fields/Requested_Location__c.field-meta.xml
<CustomField>
    <fullName>Requested_Location__c</fullName>
    <label>Requested Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Remote</fullName>
            </value>
            <value>
                <fullName>Onsite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>