unpackaged/main/default/objects/Opportunity/fields/Risk_Profile_Rating__c.field-meta.xml
<CustomField>
    <fullName>Risk_Profile_Rating__c</fullName>
    <inlineHelpText>A risk profile must be complete in order to select a risk rating.</inlineHelpText>
    <label>Risk Profile Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>