unpackaged/main/default/objects/Opportunity/fields/RM_Forecast_Amount__c.field-meta.xml
<CustomField>
    <fullName>RM_Forecast_Amount__c</fullName>
    <inlineHelpText>Updated by Sales Team</inlineHelpText>
    <label>RM Forecast/Upside Amount (Licence Fee)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>