unpackaged/main/default/objects/Opportunity/fields/RM_Forecast_AUD_Amount__c.field-meta.xml
<CustomField>
    <fullName>RM_Forecast_AUD_Amount__c</fullName>
    <inlineHelpText>RM Forecast AUD Amount used by UK on licence fee and AMS manager on AMS page layout</inlineHelpText>
    <label>Forecast AUD Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>