unpackaged/main/default/objects/Opportunity/fields/RM_Forecast_Confirm__c.field-meta.xml
<CustomField>
    <fullName>RM_Forecast_Confirm__c</fullName>
    <description>Roll back to RM Forecast Check box</description>
    <label>z_RM Commit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>