unpackaged/main/default/objects/Opportunity/fields/RM_Forecast_Date__c.field-meta.xml
<CustomField>
    <fullName>RM_Forecast_Date__c</fullName>
    <description>It&#39;s updated in process when the RM Forecast check box is ticked and it is cleared if the check is removed.</description>
    <label>RM Forecast Date</label>
    <type>Date</type>
</CustomField>