unpackaged/main/default/objects/Opportunity/fields/SaaS__c.field-meta.xml
<CustomField>
    <fullName>SaaS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>z_SaaS</label>
    <type>Checkbox</type>
</CustomField>