unpackaged/main/default/objects/Opportunity/fields/SaaS_Cloud_Hosting__c.field-meta.xml
<CustomField>
    <fullName>SaaS_Cloud_Hosting__c</fullName>
    <formula>IF( Account.SaaS__c , &#39;SaaS&#39;,
IF(Account.Cloud_Hosting__c, &#39;Cloud Hosting&#39;, &#39;&#39;)
)</formula>
    <label>SaaS/Cloud Hosting</label>
    <type>Text</type>
</CustomField>