unpackaged/main/default/objects/Opportunity/fields/SaaS_Run_Rate__c.field-meta.xml
<CustomField>
    <fullName>SaaS_Run_Rate__c</fullName>
    <inlineHelpText>Average of annual SaaS including CPI increase prior to any additional discounts</inlineHelpText>
    <label>SaaS Run Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>