unpackaged/main/default/objects/Opportunity/fields/SaaS_Run_Rate_as_at_date__c.field-meta.xml
<CustomField>
    <fullName>SaaS_Run_Rate_as_at_date__c</fullName>
    <inlineHelpText>Date of SaaS Run Rate Calculation</inlineHelpText>
    <label>SaaS Run Rate as at date</label>
    <type>Date</type>
</CustomField>