unpackaged/main/default/objects/Opportunity/fields/SaaS_Term__c.field-meta.xml
<CustomField>
    <fullName>SaaS_Term__c</fullName>
    <inlineHelpText>For SaaS/SaaS Flip/Subscription/Cloud/Term Opportunity Model</inlineHelpText>
    <label>Term</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 Year</fullName>
            </value>
            <value>
                <fullName>2 Years</fullName>
            </value>
            <value>
                <fullName>3 Years</fullName>
            </value>
            <value>
                <fullName>4 Years</fullName>
            </value>
            <value>
                <fullName>5 Years</fullName>
            </value>
            <value>
                <fullName>6 Years</fullName>
            </value>
            <value>
                <fullName>7 Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>