unpackaged/main/default/objects/Opportunity/fields/SaaS_Term_Avg_Year__c.field-meta.xml
<CustomField>
    <fullName>SaaS_Term_Avg_Year__c</fullName>
    <defaultValue>4</defaultValue>
    <description>Term Avg Year</description>
    <label>Term Avg Year</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>