unpackaged/main/default/objects/Opportunity/fields/Scheduled_In_Clarity__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_In_Clarity__c</fullName>
    <description>Scheduled In Clarity</description>
    <label>Scheduled In Clarity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Resource requirement sent to PMO</fullName>
            </value>
            <value>
                <fullName>Resource demand created</fullName>
            </value>
            <value>
                <fullName>Named resource assigned</fullName>
            </value>
            <value>
                <fullName>Assignment complete</fullName>
            </value>
            <value>
                <fullName>To be classified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>