unpackaged/main/default/objects/Opportunity/fields/Secondary_Campaign_Source__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Campaign_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Secondary Product BDM only</inlineHelpText>
    <label>Secondary Campaign Source</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Campaign.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Campaign.Status</field>
            <operation>equals</operation>
            <value>Locked In</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Opportunities (Secondary Campaign Source)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>