unpackaged/main/default/objects/Opportunity/fields/Sector__c.field-meta.xml
<CustomField>
    <fullName>Sector__c</fullName>
    <formula>Account.Sector__c</formula>
    <label>Sector</label>
    <type>Text</type>
</CustomField>