unpackaged/main/default/objects/Opportunity/fields/Send_Feedback_Survey__c.field-meta.xml
<CustomField>
    <fullName>Send_Feedback_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for Service / Consulting Opportunity</description>
    <inlineHelpText>This check box is ticked when Stage is &quot;Won&quot; and Scheduled in Clarity is &quot;Assignment complete&quot;.</inlineHelpText>
    <label>Sent Customer Survey</label>
    <type>Checkbox</type>
</CustomField>