unpackaged/main/default/objects/Opportunity/fields/Services_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Services_Ratio__c</fullName>
    <inlineHelpText>Refer to Investment Schedule</inlineHelpText>
    <label>Services Ratio</label>
    <type>TextArea</type>
</CustomField>