unpackaged/main/default/objects/Opportunity/fields/Services_Ratio_Comments__c.field-meta.xml
<CustomField>
    <fullName>Services_Ratio_Comments__c</fullName>
    <inlineHelpText>If ratio exceeds target, please provide further details to explain the reason for selecting the “exceed ratio category”</inlineHelpText>
    <label>Additional Ratio Comments</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>