unpackaged/main/default/objects/Opportunity/fields/Skillset_required__c.field-meta.xml
<CustomField>
    <fullName>Skillset_required__c</fullName>
    <description>Skillset required</description>
    <label>Skillset required</label>
    <type>TextArea</type>
</CustomField>