unpackaged/main/default/objects/Opportunity/fields/Solution__c.field-meta.xml
<CustomField>
    <fullName>Solution__c</fullName>
    <label>Solution</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OneAgedCare</fullName>
            </value>
            <value>
                <fullName>OneAirport</fullName>
            </value>
            <value>
                <fullName>OneBanking</fullName>
            </value>
            <value>
                <fullName>OneCommunity</fullName>
            </value>
            <value>
                <fullName>OneCorporate</fullName>
            </value>
            <value>
                <fullName>OneCouncil</fullName>
            </value>
            <value>
                <fullName>OneEducation</fullName>
            </value>
            <value>
                <fullName>OneEnergy</fullName>
            </value>
            <value>
                <fullName>OneEntertainment</fullName>
            </value>
            <value>
                <fullName>OneGovernment</fullName>
            </value>
            <value>
                <fullName>OneHealth</fullName>
            </value>
            <value>
                <fullName>OneHousing</fullName>
            </value>
            <value>
                <fullName>OneInsurance</fullName>
            </value>
            <value>
                <fullName>OneMembership</fullName>
            </value>
            <value>
                <fullName>OnePolytechnic</fullName>
            </value>
            <value>
                <fullName>OnePort</fullName>
            </value>
            <value>
                <fullName>OneProject</fullName>
            </value>
            <value>
                <fullName>OneResearch</fullName>
            </value>
            <value>
                <fullName>OneTAFE</fullName>
            </value>
            <value>
                <fullName>OneUniversity</fullName>
            </value>
            <value>
                <fullName>OneWater</fullName>
            </value>
            <value>
                <fullName>OneWealth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>