unpackaged/main/default/objects/Opportunity/fields/Solution_Code__c.field-meta.xml
<CustomField>
    <fullName>Solution_Code__c</fullName>
    <description>Solution Code and Version from SRS Price Book</description>
    <label>Solution Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>