unpackaged/main/default/objects/Opportunity/fields/Solution_Comments__c.field-meta.xml
<CustomField>
    <fullName>Solution_Comments__c</fullName>
    <label>Solution Comments</label>
    <type>TextArea</type>
</CustomField>