unpackaged/main/default/objects/Opportunity/fields/Special_Terms_Notes__c.field-meta.xml
<CustomField>
    <fullName>Special_Terms_Notes__c</fullName>
    <description>Special Terms/Notes</description>
    <inlineHelpText>Printed on CR</inlineHelpText>
    <label>Special Terms/Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>