unpackaged/main/default/objects/Opportunity/fields/SPIFF__c.field-meta.xml
<CustomField>
    <fullName>SPIFF__c</fullName>
    <inlineHelpText>Used by Sales Operations</inlineHelpText>
    <label>SPIFF</label>
    <type>TextArea</type>
</CustomField>