unpackaged/main/default/objects/Opportunity/fields/Stage_3_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Stage_3_Approval_Date__c</fullName>
    <description>Stage 3 Movement Date</description>
    <inlineHelpText>Automatically updated when Stage is changed to 3 or above and the Movement Date is blank.</inlineHelpText>
    <label>Stage 3 Movement Date</label>
    <type>Date</type>
</CustomField>