unpackaged/main/default/objects/Opportunity/fields/Stage_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Stage_Modified_Date__c</fullName>
    <description>Updated by workflow rule when stage is changed.</description>
    <inlineHelpText>Updated by workflow rule when stage is changed.</inlineHelpText>
    <label>Stage Modified Date</label>
    <type>Date</type>
</CustomField>