unpackaged/main/default/objects/Opportunity/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Dependent on Licence Fee Sale</fullName>
            </value>
            <value>
                <fullName>Sent to ACD / Scheduler</fullName>
            </value>
            <value>
                <fullName>Sent to Opportunity Owner for Input</fullName>
            </value>
            <value>
                <fullName>Sent to Practice Lead for input</fullName>
            </value>
            <value>
                <fullName>Sent to Infrastructure Services for input</fullName>
            </value>
            <value>
                <fullName>Sent to Return Business</fullName>
            </value>
            <value>
                <fullName>CR sent to customer for approval</fullName>
            </value>
            <value>
                <fullName>Approval Received</fullName>
            </value>
            <value>
                <fullName>Task Code Requested</fullName>
            </value>
            <value>
                <fullName>Task Code Received / Finalised</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>