unpackaged/main/default/objects/Opportunity/fields/T1_Close_Month__c.field-meta.xml
<CustomField>
    <fullName>T1_Close_Month__c</fullName>
    <formula>IF(MONTH(CloseDate)&lt;10, 
TEXT(YEAR(CloseDate)) &amp; &#39;-0&#39;&amp; TEXT(MONTH(CloseDate)),
TEXT(YEAR(CloseDate)) &amp; &#39;-&#39;&amp; TEXT(MONTH(CloseDate)))</formula>
    <label>T1 Close Month</label>
    <type>Text</type>
</CustomField>