unpackaged/main/default/objects/Opportunity/fields/T1_Industry__c.field-meta.xml
<CustomField>
    <fullName>T1_Industry__c</fullName>
    <formula>TEXT( Account.T1_Industry__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Segment</label>
    <type>Text</type>
</CustomField>