unpackaged/main/default/objects/Opportunity/fields/T1D_Cap_ARR__c.field-meta.xml
<CustomField>
    <fullName>T1D_Cap_ARR__c</fullName>
    <inlineHelpText>Used by T1D</inlineHelpText>
    <label>T1D Cap (ARR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>