unpackaged/main/default/objects/Opportunity/fields/T1Direct_CAM__c.field-meta.xml
<CustomField>
    <fullName>T1Direct_CAM__c</fullName>
    <description>Used in Opportunity View by T1D</description>
    <formula>Account.T1Direct_CAM__r.Full_Name__c</formula>
    <label>T1Direct CAM</label>
    <type>Text</type>
</CustomField>