unpackaged/main/default/objects/Opportunity/fields/TechnologyOne_Executive_Assigned__c.field-meta.xml
<CustomField>
    <fullName>TechnologyOne_Executive_Assigned__c</fullName>
    <inlineHelpText>Please type the Executive Names</inlineHelpText>
    <label>T1 Executive Assigned</label>
    <type>TextArea</type>
</CustomField>