unpackaged/main/default/objects/Opportunity/fields/Tender_Expected__c.field-meta.xml
<CustomField>
    <fullName>Tender_Expected__c</fullName>
    <label>Tender Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Proposal</fullName>
            </value>
            <value>
                <fullName>Upgrade Proposal</fullName>
            </value>
            <value>
                <fullName>PQQ</fullName>
            </value>
            <value>
                <fullName>RFI</fullName>
            </value>
            <value>
                <fullName>EOI</fullName>
            </value>
            <value>
                <fullName>ROI</fullName>
            </value>
            <value>
                <fullName>ITO</fullName>
            </value>
            <value>
                <fullName>RFP</fullName>
            </value>
            <value>
                <fullName>RFQ</fullName>
            </value>
            <value>
                <fullName>RFT</fullName>
            </value>
            <value>
                <fullName>ITT</fullName>
            </value>
            <value>
                <fullName>BAFO</fullName>
            </value>
            <value>
                <fullName>Follow Up</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>