unpackaged/main/default/objects/Opportunity/fields/Termination_for_Convenience__c.field-meta.xml
<CustomField>
    <fullName>Termination_for_Convenience__c</fullName>
    <description>Termination for Convenience</description>
    <label>Termination for Convenience</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>