unpackaged/main/default/objects/Opportunity/fields/Total_ASM_Amount_Quoted__c.field-meta.xml
<CustomField>
    <fullName>Total_ASM_Amount_Quoted__c</fullName>
    <inlineHelpText>ASM exported from Pricebook</inlineHelpText>
    <label>Annual Support &amp; Maintenance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>