unpackaged/main/default/objects/Opportunity/fields/Total_Implementation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Implementation_Amount__c</fullName>
    <label>Implementation Services Estimate ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>