unpackaged/main/default/objects/Opportunity/fields/Total_Implementation_Amount_Quoted__c.field-meta.xml
<CustomField>
    <fullName>Total_Implementation_Amount_Quoted__c</fullName>
    <inlineHelpText>Total amount quoted for TechOne implementation services</inlineHelpText>
    <label>Total Implementation Amount Quoted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>