unpackaged/main/default/objects/Opportunity/fields/Total_Service_Consulting_Fee__c.field-meta.xml
<CustomField>
    <fullName>Total_Service_Consulting_Fee__c</fullName>
    <description>Total Service/Consulting Fee</description>
    <label>Total Service/Consulting Fee</label>
    <summarizedField>Service_Only_Consulting_Request__c.Total_value__c</summarizedField>
    <summaryForeignKey>Service_Only_Consulting_Request__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>