unpackaged/main/default/objects/Opportunity/fields/Total_Services_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Total_Services_Forecast__c</fullName>
    <label>Total Services Forecast %</label>
    <summarizedField>Services_Forecast__c.Forecast__c</summarizedField>
    <summaryForeignKey>Services_Forecast__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>