unpackaged/main/default/objects/Opportunity/fields/Total_Solution_Amount_Included__c.field-meta.xml
<CustomField>
    <fullName>Total_Solution_Amount_Included__c</fullName>
    <inlineHelpText>Exported from SRS Price book</inlineHelpText>
    <label>Total Solution Amount Included</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>