unpackaged/main/default/objects/Opportunity/fields/Training_Room_Required__c.field-meta.xml
<CustomField>
    <fullName>Training_Room_Required__c</fullName>
    <description>Room Required</description>
    <label>Room Required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>